<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/reorder"
        android:title="@string/menu_reorder"
        android:icon="@drawable/ic_swap_vert_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/about"
        android:title="@string/menu_about"
        android:icon="@drawable/ic_info_outline_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/reorder_cancel"
        android:title="@string/menu_reorder_cancel"
        android:icon="@drawable/ic_clear_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/reorder_accept"
        android:title="@string/menu_reorder_accept"
        android:icon="@drawable/ic_check_white_24dp"
        app:showAsAction="always" />

</menu>
